--- a/css/style.css
+++ b/css/style.css
@@ -67,14 +67,36 @@ body{
 /* Header */
 
 .header{
+	position: absolute;
+	top:0;
+	right:0;
+	z-index: 12;
+	width: 100%;
+}
+.header__inner{
 	display: flex;
 	justify-content: space-between;
+	margin-bottom: 75px;
 	padding-top: 41px;
 }
 .header__logo{
-	background: url("/img/logo.png") center no-repeat;
+	background: url("/img/header/logo.png") center no-repeat;
 	height: 63px;
 	width: 110px;
+	background-size: contain;
+}
+.fixed{
+	position: fixed;
+	background-color: #e0e0e0;
+}
+.fixed .header__inner{
+	padding-top: 21px;
+	margin-bottom: 0;
+	padding-bottom: 15px;
+}
+.fixed .header__logo{
+	background: url("/img/header/logo_fixed.png") center no-repeat;
+	background-size: contain;
 }
 .header__nav{
 	display: flex;
@@ -91,33 +113,80 @@ body{
 	margin-right: 80px;
 	transition: .3s;
 }
+.search__icon{
+	display: block;
+	width: 25px;
+	height: 25px;
+	fill:white;
+}
+.fixed .search__icon{
+	fill:#333333;
+}
+.nav__link:last-child{
+	margin-right: 0;
+}
 .nav__link:hover{
 	opacity: .6;
 	transition: .3s;
 }
-.search__icon{
-	background: url("/img/search_btn.svg") center no-repeat;
-	width: 19px;
-	height: 18.5px;
+.fixed .nav__link{
+	color: #333333;
 }
+.phone{
+	font-size: 20px;
+}
+/* Burger */
+.burger{
+	display: none;
+	padding-top: 25px;
+}
+.burger__item{
+	display: block;
+	width: 35px;
+	height: 4px;
+	background-color: #fff;
+	font-size: 0;
+	color: transparent;
+	position: relative;
+}
+.burger__item:before,
+.burger__item:after{
+	content: "";
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	z-index: 1;
+	background-color: #fff;
+}
+.burger__item:before{
+	top: -12px;
+}
+.burger__item:after{
+	bottom: -12px;
+}
+
+
 
 /* Intro */
 .intro{
 	background: linear-gradient(90deg, rgba(41, 46, 138, 0.9) 0%, #F33D87 100%), #292E8A url("/img/intro/intro_bg.png") center no-repeat;
 	opacity: 0.92;
-	height: 944px;
+	background-size: cover;
+	padding-top: 150px;
 }
 .intro__inner{
 	display: flex;
 	justify-content: space-between;
-	padding-top: 75px;
 }
 .intro__content{
 	padding-top: 60px;
 }
 .intro__img{
 	background: url("/img/intro/intro_img.png") center no-repeat;
-	background-size: cover;
+	background-size:contain;
+	margin-right: -115px;
+	z-index: -1;
 	width: 809px;
 	height: 809px;
 }
@@ -171,7 +240,7 @@ body{
 	width: 1045px;
 	height: 192px;
 	float: right;
-	margin-top: -140px;
+	margin-top: -95px;
 	border-radius: 3px;
 	z-index: 3;
 
@@ -179,7 +248,8 @@ body{
 
 	display: flex;
 	flex-direction: row;
-	justify-content: space-evenly;
+	flex-wrap: wrap;
+	justify-content: space-between;
 	box-shadow: -5px 5px 5px -5px rgb(116, 116, 116);
 }
 /* Stats  */
@@ -188,7 +258,7 @@ body{
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
+	width: 25%;
 }
 .stats__num{
 	font-style: normal;
@@ -196,15 +266,6 @@ body{
 	font-size: 48px;
 	display: flex;
 }
-/*
-.stats__num::after{
-	content: "+";
-	color: #FD5171;
-	font-size: 24px;
-	position: absolute;
-	top:60px;
-	margin-left: 5px;
-}*/
 .stats__num span{
 	color: #FD5171;
 	font-size: 24px;
@@ -246,21 +307,23 @@ body{
 .applicants__cards{
 	display: flex;
 	flex-direction: row;
-
+	flex-wrap: wrap;
 	margin-top: 91px;
 	margin-bottom: 120px;
+	justify-content: space-between;
 }
 .applicants__item{
 	display: flex;
 	flex-direction: column;
-	width: 33.33333%;
+	width: 32.3%;
 	border: 2px solid #E7EDF8;
 	border-radius: 3px;
 	box-sizing: border-box;
 	height: 416px;
+	padding: 0 5px 0 5px;
 
 	align-items: center;
-	margin-right: 23px;
+	margin-bottom: 23px;
 	transition: box-shadow linear .2s;
 }
 .applicants__item:hover{
@@ -482,8 +545,6 @@ body{
 	text-transform: uppercase;
 
 	color: #333333;
-
-	opacity: 0.7;
 	margin-top: 42px;
 }
 .reviews__name{
@@ -503,7 +564,6 @@ body{
 	line-height: 24px;
 	/* or 150% */
 	color: #333333;
-	opacity: 0.7;
 	margin-top: 15px;
 }
 .reviews__rate{
@@ -590,9 +650,6 @@ body{
 	flex-direction: row;
 	margin-top: 83px;
 }
-.students__photo{
-	width: 490px;
-}
 .students__item{
 	width: 33.33333%;
 	background-color: #FFFFFF;
@@ -603,6 +660,7 @@ body{
 	margin-right: 24px;
 	overflow: hidden;
 	margin-bottom: 136px;
+	height: 600px;
 }
 .students__item:last-child{
 	margin-right: 0;
@@ -636,6 +694,7 @@ body{
 .partners__blocks{
 	display: flex;
 	flex-direction: row;
+	justify-content: space-between;
 	flex-wrap: wrap;
 	margin-top: 91px;
 	margin-bottom: 144px;
@@ -657,7 +716,7 @@ body{
 	width: 38px;
 }
 .partners__item{
-	width: 357px;
+	width: 24%;
 	height: 337px;
 
 	background: #FFFFFF;
@@ -669,8 +728,6 @@ body{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-
-	margin-right: 24px;
 
 	opacity: 0.3;
 	transition: opacity linear .2s;
@@ -693,16 +750,13 @@ body{
 .join__inner{
 	padding-top: 99px;
 	display: flex;
-	flex-direction: row;
+	flex-direction: column;
 }
 .join__title{
 	font-weight: 700;
 	font-size: 48px;
 	line-height: 56px;
 	max-width: 489px;
-	/* or 117% */
-	
-	
 	color: #333333;
 }
 .join__title span{
@@ -716,7 +770,8 @@ body{
 	flex-direction: column;
 }
 .join__contacts{
-	margin: 81px 0 74px 0;
+	margin-bottom: 172px;
+	margin-top: -300px;
 }
 .number{
 	font-weight: 300;
@@ -746,6 +801,9 @@ body{
 	margin-top: 16px;
 	color: #333333;
 }
+.join__social{
+	padding-top: 74px;
+}
 .social__item{
 	margin-right: 26px;
 	padding: 5px;
@@ -759,15 +817,20 @@ body{
 	display: flex;
 	flex-direction: column;
 	padding: 34px 0 112px 0;
+	max-width: 911px;
+	z-index: 3;
+}
+.join__content{
+	display: flex;
+	flex-direction: row;
 }
 .form__personalData{
 	display: flex;
 	flex-wrap: wrap;
 	flex-direction: row;
-	width: 911px;
 }
 .form__field{
-	width: 431px;
+	width: 46.9%;
 	position: relative; 
 	margin: 0 48px 52px 0;
 }
@@ -775,7 +838,7 @@ body{
 	margin-right: 0;
 }
 .form-questions{
-	width: 911px;
+	width: 100%;
 	margin-bottom: 68px;
 }
 .form__label{
@@ -793,7 +856,7 @@ body{
 }
 .form__input{
 	background-color: transparent;
-	width: inherit;
+	width: 100%;
 	border:none;
 	border-bottom: 2px solid #C4C4C4;
 	outline: none;
@@ -851,7 +914,224 @@ body{
 	height: 64px;
 }
 
+/* Media */
+@media(max-width: 1700px){
+	.intro__img{
+		margin-right: 0;
+	}
+}
+@media (max-width: 1380px){
+	.header{
+		margin-bottom: 20px;
+		padding-top: 20px;
+	}
+	.students .slick-dots{
+		left: 45%;
+	}
+	.intro__title{
+		font-size: 48px;
+		line-height: 115%;
+	}
+	.intro__img{
+		height: 709px;
+	}
+	.intro__stats{
+		margin-top: -90px;
+	}
+	.applicants__title{
+		padding-top: 130px;
+	}
+}
+@media (max-width: 1292px){
+	.intro__stats{
+		float:left;
+		width: 100%;
+	}
+	.reviews__info{
+		width: 712px;
+	}
+	.reviews__name{
+		font-size: 24px;
+	}
+	.reviews__text{
+		font-size: 15px;
+	}
+	.reviews__rate{
+		margin: 5px;
+	}
+	.partners__item{
+		width: 47%;
+	}
+	.form__field{
+		width: 80%;
+		margin-right: 0;
+	}
+}
+@media(max-width: 967px){
+	.header__nav{
+		display: none;
+		width: 100%;
+		background-color: #e0e0e0;
+		flex-direction: column;
+		text-align: center;
+		position: absolute;
+		justify-content: flex-start;
+		padding-top: 96px;
+		left: 0;
+		top: 0;
+	}
+	.burger{
+		padding-bottom: 20px;
+		background-color: transparent;
+	}
+	.show{
+		display: flex;
+	}
+	.nav__link{
+		white-space: nowrap;
+		padding: 7px 15px;
+		margin-right: 0;
+	}
+	.burger{
+		display: block;
+	}
+	.intro__img{
+		display: none;
+	}
+	.intro__btn{
+		margin-bottom: 90px;
+	}
+	.intro__title{
+		font-size: 32px;
+		line-height: 115%;
+	}
+	.intro__content{
+		width: 100%;
+		margin: 0 auto;
+		padding-top: 10px;
+	}
+	.applicants__item{
+		width: 100%;
+		margin-right: 0;
+	}
+	.reviews__item{
+		flex-direction: column;
+	}
+	.reviews__info{
+		background: none;
+	}
+	.slick-arrow{
+		position: absolute;
+		bottom: 0;
+	}
+	.slick-next{
+		right: 30%;
+	}
+	.slick-prev{
+		left: 30%;
+		z-index: 2;
+	}
+	.reviews__slider .slick-dots{
+		left: 44%;
+	}
+}
+@media(max-width: 768px){
+	.fixed .header__inner{
+		padding-top: 0;
+	}
+	.intro{
+		padding-top: 100px;
+	}
+	.header__inner{
+		padding-top: 0;
+	}
+	.intro__stats{
+		flex-direction: column;
+		width: 100%;
+		height: 630px;
+		justify-content: space-evenly;
+		align-items: center;
+		margin-top: -60px;
+	}
+	.stats__block{
+		margin-top: 0px;
+		margin-right: 0px;
+		width: 100%;
+	}
+	.departments__title{
+		padding-top: 20px;
+	}
+	.departments__cards{
+		margin-top: 40px;;
+	}
+	.departments__item__num{
+		font-size: 82px;
+		line-height: 120%;
+	}
+	.departments__item__title{
+		font-size: 18px;
+	}
+	.departments__item__text{
+		font-size: 14px;
+	}
 
-
-
-
+	.header__logo{
+		width: 100px;
+		height: 53px;
+	}
+	.applicants__item{
+		width: 100%;
+	}
+	.reviews__title{
+		margin-bottom: 20px;
+		padding-top: 30px;
+	}
+	.join__content{
+		flex-direction: column;
+	}
+	.join__form{
+		margin-bottom:0;
+		padding-bottom: 20px;
+	}
+	.join__contacts{
+		margin: 0;
+	}
+	.partners__item{
+		width: 100%;
+	}
+	.reviews__photo{
+		width: 0;
+		height: 0;
+	}
+	.title{
+		font-size: 34px;
+	}
+	.join__social{
+		padding-top: 20px;
+		padding-bottom: 50px;
+	}
+	.reviews__more{
+		float: none;
+	}
+}
+@media(max-width: 450px){
+	.reviews__title{
+		margin-bottom: 0px;
+	}
+	.reviews__slider{
+		height: 590px;
+	}
+	.reviews__text{
+		font-size: 14px;
+	}
+	.departments__item{
+		height: 590px;
+	}
+	.students__item{
+		height: 640px;
+	}
+	.header__logo{
+		width: 90px;
+		height: 43;
+	}
+}
